--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body{
 }
 
 .game-container{
+    position: relative;
     width: 100vw;
     height: 100vh;
 }
@@ -33,12 +34,41 @@ body{
     height: 100%;
 }
 
+
 .gorilla{
+    position: absolute;
+    top: 10vh;
     bottom: 50px;
     left: 100px;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     background-image: url("../assets/gorilla.png");
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.humanos{
+    position: absolute;
+    top: 10vh;
+    bottom: 50px;
+    left: 520px;
+    width: 300px;
+    height: 300px;
+    background-image: url("../assets/humano.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.botao-ataque{
+    position: absolute;
+    top: 70vh;
+    left: 220px;
+    background-color: red;
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    align-items: center;
+    justify-content:center;
+    display: flex;
+    font-weight: bold;
 }
